--- a/extensions.cabal
+++ b/extensions.cabal
@@ -97,6 +97,7 @@ library
                      , Cabal ^>= 3.12
                      , containers >= 0.6 && < 0.8
                      , directory ^>= 1.3
+                     , extra ^>= 1.7
                      , filepath >= 1.4 && < 1.6
                      , ghc-boot-th >= 8.8.1 && < 9.11
                      , parsec ^>= 3.1
